<resources>
    <string name="app_name">Moza</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="register">Register</string>
    <string name="ellipsis" translatable="false">&#8943;</string>
    <string name="emailNeededToast">An email is needed</string>
    <string name="phoneNeededToast">A phone number is needed</string>
    <string name="nameNeededToast">Please input your name.</string>
    <string name="passwordNeededToast">A password is needed</string>
    <string name="emailValidToast">Please input a valid email</string>
    <string name="passwordValidToast">Your password needs to be at least 6 characters long, needs at least one number and no whitespaces are allowed.</string>
    <string name="userNotFoundToast">User not registered or wrong password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_text_view">Forgot password?</string>
    <string name="forgot_password_description_text_view">We just need your registered email to send you a link to reset your password.</string>
    <string name="emailNotRegisteredToast">Please input your registered email.</string>
    <string name="sentEmailToast">Sent email to reset your password.</string>
    <string name="errorEmailToast">There was an error in sending the email.</string>
    <string name="alreadyRegisteredErrorToast">You already have an account.</string>
    <string name="phone">Phone</string>
    <string name="phoneInvalidToast">Input a valid phone number.</string>
    <string name="make_an_order">Make an order</string>
    <string name="qr">QR scan</string>
    <string name="integratorPrompt">Scan QR code</string>
    <string name="log_out">Log out</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="my_orders">My orders</string>
    <string name="home">Home</string>
    <string name="user_name">User name</string>
    <string name="scanCanceledToast">Scan canceled</string>
    <string name="qrScanFailedToast">QR scan failed</string>
    <string name="change_password">Change password</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm">Confirm</string>
    <string name="text_view_change_password">CHANGE PASSWORD</string>
    <string name="change_photo">Change photo</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="item_description">Description</string>
    <string name="itemNameNeededToast">Please input the new item name.</string>
    <string name="itemPriceNeededToast">Please input the new item price.</string>
    <string name="itemPriceValidToast">Please only input numbers.</string>
    <string name="itemDescriptionNeededToast">Please input a description</string>
    <string name="price">Price</string>
    <string name="add_image">Add image</string>
    <string name="add_item_text_view">Add item to the menu</string>
    <string name="annotation">Annotation</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="passwordMatchToast">New passwords don\'t match</string>
    <string name="cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="subtotal">Amount</string>
    <string name="go_back_to_menu">Add More</string>
    <string name="menu">Menu</string>
    <string name="delete_cart_list_alert">Delete cart</string>
    <string name="confirm_delete_cart_alert">If you go back, your cart list will be deleted. Are you sure?</string>
    <string name="ok_alert_button">Yes</string>
    <string name="no_alert_button">No</string>
    <string name="last_step">Last step!</string>
    <string name="finish_order">Finish order</string>
    <string name="Payment">Payment</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash">Cash</string>
    <string name="address">Address</string>
    <string name="address_example">Street, Number, Apartment, Neighborhood</string>
    <string name="edit_item">Edit</string>
    <string name="delete_item">Delete</string>
    <string name="passwordWrongToast">Current password is wrong</string>
    <string name="passwordUpdateFailedToast">Password update failed</string>
    <string name="passwordUpdatedToast">Password updated</string>
    <string name="changeSavedToast">The changes have been saved</string>
    <string name="uploadingToast">Uploading</string>
    <string name="imageChangedToast">Image has been changed</string>
    <string name="edit_cart">Delete item from cart </string>
    <string name="confirm_delete_item_cart_alert">Are you sure you want to delete this item?</string>
    <string name="item_removed">Item removed successfully</string>
    <string name="order_status">In Progress</string>
    <string name="wrongQrCodeToast">Wrong QR code</string>
    <string name="orderHasBeenSentToast">Your order has been sent</string>
    <string name="addressNeededToast">Please input your address</string>
    <string name="paymentNeededToast">Select a payment option</string>
    <string name="time">Time</string>
    <string name="status">Status</string>
</resources>