<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="254dp"
            android:layout_height="225dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.031"
            app:srcCompat="@drawable/m_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:layout_marginStart="99dp"
            android:layout_marginEnd="99dp"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.381"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:layout_marginStart="99dp"
            android:layout_marginEnd="99dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.477"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginEnd="99dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:layout_marginBottom="10dp"
                android:text="@string/forgot_password"
                android:textColor="#3F51B5"
                android:textSize="12sp" />

        </LinearLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="222dp"
            android:layout_height="49dp"
            android:layout_marginStart="132dp"
            android:layout_marginEnd="133dp"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorPrimary"
            app:backgroundTintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.604"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/button_register"
            android:layout_width="222dp"
            android:layout_height="49dp"
            android:layout_marginStart="132dp"
            android:layout_marginEnd="133dp"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorAccent"
            app:backgroundTintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.714"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>